# MathLogic_HW1

./: CHANGELOG.md  MathLogic-HW1.cabal  README.md
app/: Checker.hs  Convert.hs  Main.hs  randomTest.hs  test.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
