cabal-version:      2.4
name:               MathLogic-HW1
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alexander
maintainer:         alek.tulchinskij2011@yandex.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable MathLogic-HW1
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test
    type:       exitcode-stdio-1.0
    main-is:    test.hs
    build-depends: base
    hs-source-dirs:   app
    other-modules: Convert, Checker

Test-Suite randomTest
    type:       exitcode-stdio-1.0
    main-is:    randomTest.hs
    build-depends: base, QuickCheck
    hs-source-dirs:   app
    other-modules: Convert, Checker
